<resources>
    <string name="app_name">U Learn It</string>
    <string name="first_language_text">English</string>
    <string name="second_language_text">Tagalog</string>
    <string name="title_categories">Choose Your Category</string>
    <string name="anatomy_category_image">Anatomy Image</string>
    <string name="anatomy_category_text">Anatomy</string>
    <string name="animals_category_image">Animals Image</string>
    <string name="animals_category_text">Animals</string>
    <string name="beverages_category_image">Beverages Image</string>
    <string name="beverages_category_text">Beverages</string>
    <string name="colors_category_image">Colors Image</string>
    <string name="colors_category_text">Colors</string>
    <string name="conversation_category_image">Conversation Image</string>
    <string name="conversation_category_text">Conversation</string>
    <string name="countries_category_image">Countries Image</string>
    <string name="countries_category_text">Countries</string>
    <string name="directions_category_image">Directions Image</string>
    <string name="directions_category_text">Directions</string>
    <string name="emotions_category_image">Emotions Image</string>
    <string name="emotions_category_text">Emotions</string>
    <string name="food_category_image">Food Image - Polar Bear with Fish</string>
    <string name="food_category_text">Food</string>
    <string name="general_category_image">General Image - Detective Penguin</string>
    <string name="general_category_text">General</string>
    <string name="greetings_category_image">Greetings Image - Penguin Waving</string>
    <string name="greetings_category_text">Greetings</string>
    <string name="grammatical_category_image">Grammatical Image</string>
    <string name="grammatical_category_text">Grammatical</string>
    <string name="home_category_image">Home Image</string>
    <string name="home_category_text">Home</string>
    <string name="medical_category_image">Medical Image</string>
    <string name="medical_category_text">Medical</string>
    <string name="numbers_category_image">Numbers Category - Snake in shape of Number 1</string>
    <string name="numbers_category_text">Numbers</string>
    <string name="occupations_category_image">Occupations Image</string>
    <string name="occupations_category_text">Occupations</string>
    <string name="people_category_image">People Image - Owl Family</string>
    <string name="people_category_text">People</string>
    <string name="places_category_image">Places Image</string>
    <string name="places_category_text">Places</string>
    <string name="plants_category_image">Plants Image</string>
    <string name="plants_category_text">Plants</string>
    <string name="relationship_category_image">Relationship Image - Owl Family</string>
    <string name="relationship_category_text">Relationship</string>
    <string name="shopping_category_image">Shopping Image</string>
    <string name="shopping_category_text">Shopping</string>
    <string name="theocratic_category_image">Theocratic Image</string>
    <string name="theocratic_category_text">Theocratic</string>
    <string name="time_category_image">Time Image</string>
    <string name="time_category_text">Time</string>
    <string name="transportation_category_image">Transportation Image</string>
    <string name="transportation_category_text">Transportation</string>
    <string name="travel_category_image">Travel Image</string>
    <string name="travel_category_text">Travel</string>
    <string name="verbs_category_image">Verbs Image</string>
    <string name="verbs_category_text">Verbs</string>
    <string name="weather_category_image">Weather Image</string>
    <string name="weather_category_text">Weather</string>
    <string name="action_about">About</string>
    <string name="action_favorites">Favorites</string>
    <string name="category_message_learn">Learn the Words or Phrases</string>
    <string name="floating_button_content_desc">Take The Test</string>
    <string name="favorites_category_text">Favorites</string>
    <string name="default_category_name">No Category Selected</string>
    <string name="default_category_text">Please Go Back and Select a Category</string>
    <string name="fab_quiz">Take the Quiz</string>
    <string name="category_text">Category</string>
    <string name="entry_first_language_text">First Language:</string>
    <string name="entry_first_language_edit_hint">Place the first language here</string>
    <string name="entry_first_language_edittext">1st Language</string>
    <string name="entry_word_or_phrase_text">Word or Phrase:</string>
    <string name="entry_word_or_phrase_edit_hint">Place a word, phrase, or sentence here</string>
    <string name="entry_romanization_edit_hint">Enter romanization or phonetics</string>
    <string name="entry_example_edit_hint">Enter an example</string>
    <string name="entry_second_language_text">Second Language:</string>
    <string name="entry_second_language_edit_hint">Place the second language here</string>
    <string name="entry_second_language_edittext">2nd Language</string>
    <string name="entry_translated_word_or_phrase_text">Translated Entry:</string>
    <string name="entry_translated_word_or_phrase_edittext">Place the translation here</string>
    <string name="btn_save_text">Save</string>
    <string name="btn_delete_text">Delete</string>
    <string name="action_new">New</string>
    <string name="action_edit">Edit</string>
    <string name="new_entry_modifier_message">Enter a New Translation Entry</string>
    <string name="edit_entry_modifier_message">Update the Translation Entry</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="fab_quiz_text">Quiz</string>
    <string name="fab_text_test">Test</string>
    <string name="question_response_image_content_desc">Question Response Image</string>
    <string name="developed_by_text">DevSketch Studios</string>
    <string name="developer_name_text">Owner/Developer: David Oberlander</string>
    <string name="version_number_text">v %1$s</string>
    <string name="about_text_paragraph_one">I am an Application Developer that started developing this app in college for my final assignment.</string>
    <string name="about_text_paragraph_two">This is the first android app I created with Java, and I was inspired to create this app through my love of learning new languages and continue its development after I graduated. This app is designed to start you off with a few basics, but allows you to add your own entries and apply extra details and information as you grow to learn new words, phrases, grammar, and sentences.
        Images used are CC Public Domain images from openclipart.org</string>
    <string name="about_text_paragraph_three">Thank you for checking out my app. I hope it helps you in your journey.</string>
    <string name="test_not_available">Tests are not available at this time</string>
    <string name="about">About</string>
    <string name="results_your_grade_is">Your Grade Is:</string>
    <string name="translation_item_favorites_toggle_content_desc">Favorites toggle heart</string>
    <string name="quiz_completed_message">Quiz Completed</string>
    <string name="action_translate">Google Translate</string>
    <string name="action_ai">ChatGPT</string>
    <string name="resultMessage_Great">Great Job!</string>
    <string name="resultMessage_Good">Good Job</string>
    <string name="resultMessage_Okay">Keep practicing</string>
    <string name="resultMessage_Bad">You can do it, don\'t give up!</string>
    <string name="web_translate_language_not_avail">This language could not be loaded.</string>
    <string name="help_category_page_heading">ENTRIES LISTS:</string>
    <string name="help_single_tap">Single Tap:</string>
    <string name="help_users_guide">User Guide</string>
    <string name="help_long_press">Long Press:</string>
    <string name="help_double_tap">Double Tap:</string>
    <string name="help_single_tap_text">Selects Entry and Displays Edit Menu Option</string>
    <string name="help_double_tap_text">Searches Google Translate Selected Word Using the Second Language</string>
    <string name="help_long_press_text">Displays the Selected Entries Languages</string>
    <string name="help_audio_icon">Audio Icon</string>
    <string name="help_audio_icon_text">Plays the translation entry</string>
    <string name="help_more_icon">Three Dots Icon</string>
    <string name="help_more_icon_text">Shows the entry details page</string>
    <string name="help_red_hearts">Red Hearts:</string>
    <string name="help_red_hearts_text">Tap a Heart to Add to Favorites. Tap Again to Remove It.</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="help_settings_page_heading">Settings Page:</string>
    <string name="help_settings_languages">Languages</string>
    <string name="help_settings_languages_text">Select the languages that you want the entry lists to populate/create.</string>
    <string name="entry_type_text">Entry Type:</string>
    <string name="entry_type_edit_hint">Type</string>
    <string name="notes_text">Notes:</string>
    <string name="notes_edittext">Place any notes here</string>
    <string name="btn_archive_text">ARCHIVE</string>
    <string name="tense_edit_hint">Tense</string>
    <string name="formality_edit_hint">Formality</string>
    <string name="gender_edit_hint">Gender</string>
    <string name="tense_text">Tense</string>
    <string name="gender_text">Gender</string>
    <string name="edit_show_romanize">+ Romanize</string>
    <string name="edit_hide_romanize">- Romanize</string>
    <string name="edit_show_example">+ Example</string>
    <string name="edit_hide_example">- Example</string>
    <string name="entry_summary_note_edit_hint">Enter a brief summary note</string>
    <string-array name="languages">
        <item>Chinese_Simplified</item>
        <item>English</item>
        <item>Hmong</item>
        <item>Ilocano</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Tagalog</item>
    </string-array>
    <string-array name="categoryOptions">
        <item>Anatomy</item>
        <item>Animals</item>
        <item>Beverages</item>
        <item>Colors</item>
        <item>Conversation</item>
        <item>Countries</item>
        <item>Directions</item>
        <item>Emotions</item>
        <item>Food</item>
        <item>General</item>
        <item>Grammatical</item>
        <item>Greetings</item>
        <item>Home</item>
        <item>Medical</item>
        <item>Numbers</item>
        <item>Occupations</item>
        <item>People</item>
        <item>Places</item>
        <item>Plants</item>
        <item>Relationship</item>
        <item>Shopping</item>
        <item>Theocratic</item>
        <item>Time</item>
        <item>Transportation</item>
        <item>Travel</item>
        <item>Verbs</item>
        <item>Weather</item>
    </string-array>
    <string-array name="entryTypeOptions">
        <item>Abbreviation</item>
        <item>Adjective</item>
        <item>Adverb</item>
        <item>Conjunction</item>
        <item>Determiner</item>
        <item>Honorific</item>
        <item>Particle</item>
        <item>Phrase</item>
        <item>Postposition</item>
        <item>Preposition</item>
        <item>Pronoun</item>
        <item>Marker</item>
        <item>Noun</item>
        <item>Number (Native)</item>
        <item>Number (Other)</item>
        <item>Sentence</item>
        <item>Question</item>
        <item>Verb</item>
    </string-array>
    <string-array name="tenseOptions">
        <item>N/A</item>
        <item>Base</item>
        <item>Past</item>
        <item>Present</item>
        <item>Future</item>
    </string-array>
</resources>