<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:iconTint="#FFD53B"
        android:orderInCategory="90"
        android:title="@string/action_help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_translate"
        android:orderInCategory="60"
        android:title="@string/action_translate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ai"
        android:orderInCategory="60"
        android:title="@string/action_ai"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="60"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_newEntry"
        android:icon="@drawable/ic_add"
        android:orderInCategory="9"
        android:title="@string/action_new"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorites"
        android:iconTint="#FF03F2"
        android:orderInCategory="10"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom" />
</menu>