<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_newEntry"
        android:icon="@drawable/ic_add"
        android:orderInCategory="80"
        android:title="@string/action_new"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_editEntry"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="90"
        android:title="@string/action_edit"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorites"
        android:iconTint="#FF03F2"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom" />
</menu>