<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/heading_LinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="#323E43"
        android:elevation="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/categories_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/title_categories"
            android:textAlignment="center"
            android:textColor="#F7FCFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Penguin Waving image resource link -->
    <!-- https://publicdomainvectors.org/en/free-clipart/Waving-penguin/75280.html -->
    <ImageButton
        android:id="@+id/greetings_ImageBtn"
        android:layout_marginStart="24dp"
        android:backgroundTint="#3F51B5"
        android:contentDescription="@string/greetings_category_image"
        android:onClick="launchCategoryActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_LinearLayout"
        app:srcCompat="@drawable/ic_penguin_wave"
        style="@style/category_button_image" />

    <TextView
        android:id="@+id/greeting_TextView"
        android:text="@string/greetings_category_text"
        app:layout_constraintBottom_toBottomOf="@+id/greetings_ImageBtn"
        app:layout_constraintEnd_toEndOf="@+id/greetings_ImageBtn"
        app:layout_constraintStart_toStartOf="@+id/greetings_ImageBtn"
        style="@style/category_button_text" />

    <!-- Snake Number One image resource link -->
    <!-- https://publicdomainvectors.org/en/free-clipart/Snake-number-one-vector-clip-art/30666.html -->
    <ImageButton
        android:id="@+id/numbers_ImageBtn"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#673AB7"
        android:contentDescription="@string/numbers_category_image"
        android:onClick="launchCategoryActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_LinearLayout"
        app:srcCompat="@drawable/ic_numbers_foreground"
        style="@style/category_button_image" />

    <TextView
        android:id="@+id/numbers_TextView"
        android:text="@string/numbers_category_text"
        app:layout_constraintBottom_toBottomOf="@+id/numbers_ImageBtn"
        app:layout_constraintEnd_toEndOf="@+id/numbers_ImageBtn"
        app:layout_constraintStart_toStartOf="@+id/numbers_ImageBtn"
        style="@style/category_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>